# adventofcode2021

./: .gitignore  .pre-commit-config.yaml  README.md  aoc.py  aoc_test.py  setup.cfg
testing/: __init__.py  day1_sweep_report.py  day2_planned_course.py  day3_diagnostic_report.py  day4_bingo.py  planned_course.py  sweep_report.py
tests/: __init__.py  aoc_test.py  conftest.py
