[metadata]
name = adventofcode2021
version = 0.1.0
description = Advent of Code 2021
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/briandcho/adventofcode2021
author = Brian Cho
author_email = briandcho@yahoo.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[coverage:run]
plugins = covdefaults

[flake8]
max-line-length = 100
ignore =
    E203  # whitespace before ':'

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-aoc_test]
disallow_untyped_defs = false

[tox:tox]
envlist = py36,py37,py38,py39,py310,pre-commit
toxworkdir = {env:TOXWORKDIR:.tox}

[testenv]
deps =
    covdefaults
    coverage
    pytest
commands =
    coverage erase
    coverage run -m pytest {posargs:}
    coverage report {env:COVERAGE_OPTS:}

[testenv:pre-commit]
deps = pre-commit
skip_install = true
commands = pre-commit run --all-files --show-diff-on-failure
